@@ -1,5 +1,6 @@
 
 5.2b1 -> 5.3a1
+    - jbj: md6: set rounds/parallel passes parameters from ctx->flags.
     - jbj: cubehash: set rounds/blockbytes parameters from ctx->flags.
     - jbj: cubehash: optimize with -msse2.
     - jbj: rpmdigest: use md6sum, not NIST, for MD6 test vectors.
